<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Flight Controller</string>
    <string name="signIn">Sign In</string>
    <string name="email">E-Mail:</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="cpassword">Re-Type Password:</string>
    <string name="gSignIn">Guest Sign In</string>
    <string name="remember">Remember Me</string>
    <string name="signup"><u>Sign Up?</u></string>
    <string name="signup2">Sign Up</string>
    <string name="signupS">Sign Up Successful</string>
    <string name="signupF">Sign Up Failed</string>
    <string name="signupF2">This username is Already Taken!</string>
    <string name="signingIn">Signing In</string>
    <string name="loginS">Sign-In Successful</string>
    <string name="incorrect">Invalid Username or Password</string>
    <string name="incorrect2">Passwords Do Not Match</string>
    <string name="incorrect3">Please Enter a Username and Password</string>
    <string name="incorrect4">Please Enter a Valid Email</string>
    <string name="incorrect6">Username Must be Shorter then 10 Characters</string>
    <string name="network">Network Connection Lost</string>
    <string name="Cancel1">Cancel?</string>
    <string name="CancelS2">Sign-Up Cancelled</string>
    <string name="check2">Are you sure you want to Sign Up?</string>
    <string name="ConfirmS1">Sign Up</string>
    <string name="Confirm2">Confirm</string>
    <string name="signingUp">Signing Up</string>
    <string name="wait0">Creating An Account</string>
    <string name="wait1">Confirming Authentication</string>
    <string name="wait2">Loading User Data</string>
    <string name="noContent">No Content To Be Displayed</string>
    <string name="loading">Loading Information</string>
    <string name="offline">Network Connection is Unavailable</string>

    <string name="FST">Flight Start Time:</string>
    <string name="FET">Flight End Time:</string>
    <string name="FD">Flight Duration:</string>
    <string name="BL">Approximent Battery Life:</string>
</resources>
