<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/coolBlue"

    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".SignIn">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        android:id="@+id/logo"
        android:layout_marginBottom="30dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:id="@+id/editText"
        android:layout_below="@id/logo"
        android:hint="@string/username"
        android:maxLines="1"
        android:inputType="text"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:inputType="textPassword"
        android:maxLines="1"
        android:ems="10"
        android:id="@+id/editText3"
        android:layout_below="@+id/editText"
        android:layout_alignParentStart="true"
        android:hint="@string/password"
        android:layout_alignParentEnd="true" />


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember"
        android:id="@+id/checkBox"
        android:layout_below="@+id/editText3"
        android:layout_alignParentStart="true"
        android:checked="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/signup"
        android:textColor="@color/purple"
        android:id="@+id/textView7"
        android:layout_alignTop="@+id/checkBox"
        android:layout_alignEnd="@+id/editText3" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gSignIn"
        android:id="@+id/button4"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/rounded_button"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signIn"
        android:id="@+id/button"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@id/button4"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rounded_button"/>

</RelativeLayout>
